--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/helmet_amber.png" />
+    <link rel="icon" href="./src/assets/helmet_amber.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PenaltyMoto</title>
 
